# spf-dialect

./: .clang-format  .gitignore  CMakeLists.txt  README.md  aliases.sh  dense_matvec.mlir  dense_mttkrp_gpu_test.mlir  dense_mttkrp_test.mlir  jacobi.mlir  no_transform_jacobi_test.mlir  no_transform_multi_statement_test.mlir  run_dense_matvec.sh  run_test.sh  simple_multi_statement_test.mlir  sparse_mttkrp_gpu_test.mlir  sparse_mttkrp_test.mlir  test.mlir  transformed_jacobi_test.mlir  transformed_multi_statement_test.mlir
bench/: CMakeLists.txt  README.md  benchmarks.cpp  benchmarks.h  driver.cpp  mttkrp.cpp  read_data_cpu.h  read_data_gpu.cu  read_data_gpu.h  sparse_mttkrp.mlir  sparse_mttkrp_cpu.mlir  sparse_mttkrp_extra_stuff.mlir  sparse_mttkrp_gpu.mlir  sparse_mttkrp_pasta_gpu.mlir  sparse_ttm.mlir
bench/data/: full-run-j-5-feb-6-pasta-run433386-mlir-run-435312.csv  full-run-j-5-jan-22-pasta-run433386-mlir-run-433385.csv  mlir-run-433385  mlir-run-435312  pasta-run-433386
include/: CMakeLists.txt
include/Runtime/: CPURuntime.h  GPURuntime.h  runtime.h
include/SPF/: CMakeLists.txt  SPFDialect.h  SPFDialect.td  SPFOps.h  SPFOps.td
include/SPFTransforms/: CMakeLists.txt  Passes.h  Passes.td
include/Standalone/: CMakeLists.txt  StandaloneDialect.td  StandaloneOps.h  StandaloneOps.td
include/StandaloneTransforms/: CMakeLists.txt  Passes.h  Passes.td
jacobi/: CMakeLists.txt  README.md  jacobi.c  jacobi_IEGEN.c  jacobi_expected.cpp  jacobi_no_transform_statement_printer.c  jacobi_statement_printer.c  jacobi_transformed_statement_printer.c
lib/: CMakeLists.txt
lib/Mttkrp/: CMakeLists.txt  mttkrp.cpp
lib/Parser/: CMakeLists.txt  main.cpp
lib/Runtime/: CMakeLists.txt  CPURuntime.cpp  GPURuntime.cu  README.md  runtime.cpp  runtime.cu
lib/SPF/: CMakeLists.txt  SPFDialect.cpp  SPFOps.cpp
lib/SPFTransforms/: CMakeLists.txt  ConvertSPFToLoops.cpp  MyPass.cpp  Parser.h  Utils.h
lib/Standalone/: CMakeLists.txt  StandaloneDialect.cpp  StandaloneOps.cpp
lib/StandaloneTransforms/: CMakeLists.txt  MyPass.cpp  Parser.h  Printer.cpp  Printer.h  Utils.cpp  Utils.h
mttkrp/: mttkrp.cpp
parser/: CMakeLists.txt  README.md  main.cpp
scripts/: README.md  bench.sh  create_plots.ipynb  get_data.sh  munge_pasta_benchmark_to_csv.py
spf-opt/: CMakeLists.txt  README.md  spf-opt.cpp
standalone-opt/: CMakeLists.txt  standalone-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/SPF/: dummy.mlir  jacobi.mlir  jacobi_statement_printer.mlir  jacobi_statement_printer_with_transformations.mlir  jacobi_with_transformations.mlir  mttkrp_dense_cpu.mlir  mttkrp_dense_gpu.mlir  mttkrp_sparse_cpu.mlir  mttkrp_sparse_gpu.mlir
test/Standalone/: dummy.mlir  standalone-opt.mlir
